<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="batman.alfred.AlarmRingingActivity">

    <ImageView
        android:id="@+id/alarm_pic"
        android:layout_width="wrap_content"
        android:layout_height="153dp"
        android:contentDescription="@string/alarm_pic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alarm" />

    <TextView
        android:id="@+id/wake_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/wake_up"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_pic" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="151dp"
        android:layout_height="71dp"
        android:layout_marginTop="112dp"
        android:background="@color/colorPrimary"
        android:onClick="stopAlarm"
        android:text="@string/button_stop"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wake_up" />
</android.support.constraint.ConstraintLayout>
