<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="batman.alfred.MainActivity">

    <Button
        android:id="@+id/button_wake_me"

        android:layout_width="243dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/my_button"
        android:onClick="goToWakeMe"
        android:text="@string/button_wake_me"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_control_lights" />

    <Button
        android:id="@+id/button_control_lights"

        android:layout_width="243dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/my_button"
        android:onClick="goToControlLights"
        android:text="Control Lights"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alfred_question" />

    <ImageView
        android:id="@+id/alfred_pic"
        android:layout_width="wrap_content"
        android:layout_height="194dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/alfred_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alfred" />

    <TextView
        android:id="@+id/alfred_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alfred_question"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alfred_pic" />

</android.support.constraint.ConstraintLayout>
