<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="batman.alfred.ControlLightsActivity">

    <Button
        android:id="@+id/button_lights_on"
        android:layout_width="172dp"
        android:layout_height="182dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimary"
        android:drawableTop="@drawable/ic_logo_light_on"
        android:onClick="turnLightsOn"
        android:text="@string/button_lights_on"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_lights_off"
        android:layout_width="171dp"
        android:layout_height="182dp"
        android:layout_marginTop="52dp"
        android:background="@color/colorPrimary"
        android:drawableTop="@drawable/ic_logo_light_off"
        android:onClick="turnLightsOff"
        android:text="@string/button_lights_off"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_lights_on" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/control_lights_bar"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/control_lights_bar_text"
        android:layout_width="182dp"
        android:layout_height="37dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/control_lights_bar"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/control_lights_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toast_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_lights_off" />
</android.support.constraint.ConstraintLayout>
